PRJ_VER=0.8.3
SUMMARY=Release version are now defined in
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=
[Changes]
- New command: koji-build-scratch.sh for scratch build on all supported
  releases.
- [TODO] Release versions are now defined in configuration file for easy
  maintenance.
- Variable Removed:
  FEDORA_NEXT_RELEASE
  FEDORA_NEXT_RELEASE_TAGS
  FEDORA_LATEST_RELEASE
  FEDORA_PREVIOUS_RELEASE
