@@ -1,4 +1,4 @@
-FEDORA_RAWHIDE_VERSION=17
-FEDORA_SUPPORTED_VERSIONS="16 15"
+FEDORA_RAWHIDE_VERSION=18
+FEDORA_SUPPORTED_VERSIONS="17 16 15"
 EPEL_SUPPORTED_VERSIONS="6 5"
 
