@@ -7,6 +7,8 @@ REDHAT_BUGZILLA=
   releases.
 - [TODO] Release versions are now defined in configuration file for easy
   maintenance.
+- RELEASE_ON_FEDORA support new tags: "fedora" for current fedora,
+  and "epel" for current epel.
 - Variable Removed:
   FEDORA_NEXT_RELEASE
   FEDORA_NEXT_RELEASE_TAGS
